fixed dashboard readability

--- a/packages/Webkul/Admin/src/Resources/assets/sass/_variables.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/_variables.scss
@@ -12,7 +12,7 @@ $btn-primary-bg: #0041FF;
 $btn-danger-bg: red;
 
 // Cards
-$card-title: #a2a2a2;
+$card-title: #3a3a3a;
 $card-background: $white;
 
 // Dashboard
