--- a/packages/Webkul/Admin/src/Resources/assets/sass/partials/_dashboard.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/partials/_dashboard.scss
@@ -71,11 +71,11 @@
                         margin-top: 10px;
 
                         .name {
-                            color: rgba(255,255,255,0.8);
+                            color: #3a3a3a;
                         }
 
                         .info {
-                            color: rgba(255,255,255,0.8);
+                            color: #3a3a3a;
                             margin-top: 5px;
                         }
                     }
